generated/checkers/refine/KN-Misuse-ac19c4c3-0/build_logs/syntax-repair-refine-0-1/build_stderr_2.log
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: error: specialization of ‘template<class T> struct clang::ento::ProgramStateTrait’ in different namespace [-fpermissive]
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: note: in definition of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:27:1: note: in expansion of macro ‘REGISTER_MAP_WITH_PROGRAMSTATE’
   27 | REGISTER_MAP_WITH_PROGRAMSTATE(SymbolUpperBoundMap, SymbolRef, llvm::APSInt)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:51:30: note:   from definition of ‘template<class T> struct clang::ento::ProgramStateTrait’
   51 | template <typename T> struct ProgramStateTrait {
      |                              ^~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: error: explicit specialization of ‘template<class T> struct clang::ento::ProgramStateTrait’ outside its namespace must use a nested-name-specifier [-fpermissive]
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: note: in definition of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:27:1: note: in expansion of macro ‘REGISTER_MAP_WITH_PROGRAMSTATE’
   27 | REGISTER_MAP_WITH_PROGRAMSTATE(SymbolUpperBoundMap, SymbolRef, llvm::APSInt)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:43:27: error: definition of ‘static void* clang::ento::ProgramStateTrait<clang::ento::{anonymous}::SymbolUpperBoundMap>::GDMIndex()’ is not in namespace enclosing ‘clang::ento::ProgramStateTrait<clang::ento::{anonymous}::SymbolUpperBoundMap>’ [-fpermissive]
   43 |     static void *GDMIndex() {                                                  \
      |                           ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:88:5: note: in expansion of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   88 |     REGISTER_TRAIT_WITH_PROGRAMSTATE(Name, \
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:27:1: note: in expansion of macro ‘REGISTER_MAP_WITH_PROGRAMSTATE’
   27 | REGISTER_MAP_WITH_PROGRAMSTATE(SymbolUpperBoundMap, SymbolRef, llvm::APSInt)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
